<resources>
    <string name="app_name">Baby Needs</string>
    <string name="action_settings">Settings</string>
    <string name="enter_item_text_pop">Enter Item</string>
    <string name="enter_item_hint_pop">Item Name</string>
    <string name="qty_item_hint_pop">Quantity</string>
    <string name="color_item_hint_pop">Color</string>
    <string name="size_item_hint_pop">Size</string>
    <string name="save_button_text_pop">Save</string>
    <string name="update_button_text_pop">Update</string>
    <string name="add_item_text_main">Add Item</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
