<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
    <TextView
        android:id="@+id/add_item_pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="@string/enter_item_text_pop" />
        <EditText
            android:id="@+id/item_name_pop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:hint="@string/enter_item_hint_pop"
            android:layout_below="@id/add_item_pop"/>
        <EditText
            android:id="@+id/item_quantity_pop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:inputType="number"
            android:hint="@string/qty_item_hint_pop"
            android:layout_below="@id/item_name_pop"/>
        <EditText
            android:id="@+id/item_color_pop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:hint="@string/color_item_hint_pop"
            android:layout_below="@id/item_quantity_pop"/>
        <EditText
            android:id="@+id/item_size_pop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:inputType="number"
            android:hint="@string/size_item_hint_pop"
            android:layout_below="@id/item_color_pop" />
        <Button
            android:id="@+id/save_btn_pop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_size_pop"
            android:layout_marginTop="10dp"
            android:text="@string/save_button_text_pop"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>